--- a/Day 3/day3.ipynb
+++ b/Day 3/day3.ipynb
@@ -211,7 +211,7 @@
     "8. After proceeding , on the same page, you'll see a link *uploading an existing file* , click on that.\n",
     "9. then you will see a box, asking *Drag and Drop the files here* and *choose files*.\n",
     "10. You can go for either of the ways.\n",
-    "11. You have to upload the entire folder, so either choose it from the new dialog box or drag the folder in the space .\n",
+    "11. You have to upload the entire folder, so either choose it from the new dialog box or drag the folder in the space and then go at the bottom of the page you'll see *commit changes* button, click on that.\n",
     "12. After uploading verify if the assignment notebook is there on in the uploaded folder.\n",
     "13. If everything is fine, copy the url of the page.\n",
     "14. Open the *Google form* link provided by lets upgrade community and fill that form with correct details.\n",
